update on the javascript

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <div id="calculator">
          <input id="display" readonly>
     <div id="keys">
-        <button onclick="appendToDisplay('+')" class="operator-btn">+</button>
-        <button onclick="appendToDisplay('7')">7</button>
-        <button onclick="appendToDisplay('8')">8</button>
-        <button onclick="appendToDisplay('9')">9</button>
-        <button onclick="appendToDisplay('-')"class="operator-btn">-</button>
-        <button onclick="appendToDisplay('4')">4</button>
-        <button onclick="appendToDisplay('5')">5</button>
-        <button onclick="appendToDisplay('6')">6</button>
-        <button onclick="appendToDisplay('*')"class="operator-btn">*</button>
-        <button onclick="appendToDisplay('1')">1</button>
-        <button onclick="appendToDisplay('2')">2</button>
-        <button onclick="appendToDisplay('3')">3</button>
-        <button onclick="appendToDisplay('/')"class="operator-btn">/</button>
-        <button onclick="appendToDisplay('0')">0</button>
-        <button onclick="appendToDisplay('.')">.</button>
-        <button onclick="calculate()">=</button>
-        <button onclick="clearDisplay()"class="operator-btn">C</button>
+        <button id="plus">+</button>
+        <button data-number="7">7</button>
+        <button odata-number="8">8</button>
+        <button data-number="9">9</button>
+        <button data-operator="-">-</button>
+        <button data-number="4">4</button>
+        <button data-number="5">5</button>
+        <button data-number="6">6</button>
+        <button data-operator="*">*</button>
+        <button data-number="1">1</button>
+        <button data-number="2">2</button>
+        <button data-number="3">3</button>
+        <button data-operator="/">/</button>
+        <button data-number="0">0</button>
+        <button data-number=".">.</button>
+        <button id="equals">=</button>
+        <button id="clear">C</button>
     </div>
     </div>
 
